<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:contentDescription="@string/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_data"
        android:icon="@drawable/database"
        android:contentDescription="@string/data"
        android:title="@string/data" />

    <item
        android:id="@+id/nav_placeholder"
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/nav_file"
        android:icon="@drawable/file"
        android:contentDescription="@string/file"
        android:title="@string/file" />

    <item
        android:id="@+id/nav_user"
        android:icon="@drawable/user"
        android:contentDescription="@string/user"
        android:title="@string/user" />

</menu>