<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:context=".LoginActivity"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/tv_login1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tv_login1"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/bold"
            android:text="@string/register1"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tv_login2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/register2"
            android:fontFamily="@font/regular"
            app:layout_constraintBottom_toTopOf="@+id/et_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_name"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textCapSentences"
            android:fontFamily="@font/regular"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/et_email_reg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/name"
            android:paddingRight="20dp"
            android:paddingLeft="25dp" />

        <EditText
            android:id="@+id/et_email_reg"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/regular"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/et_password_reg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/email"
            android:paddingRight="20dp"
            android:paddingLeft="25dp" />

        <EditText
            android:id="@+id/et_password_reg"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:ems="10"
            android:hint="@string/password"
            android:fontFamily="@font/regular"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingEnd="45dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_terms"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/password"
            android:paddingLeft="25dp"
            android:paddingRight="45dp" />

        <ImageView
            android:id="@+id/btn_show_pass_reg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:alpha=".35"
            android:scaleX= "0.7"
            android:scaleY= "0.7"
            app:layout_constraintBottom_toBottomOf="@+id/et_password_reg"
            app:layout_constraintEnd_toEndOf="@id/et_password_reg"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/et_password_reg"
            app:layout_constraintTop_toTopOf="@+id/et_password_reg"
            android:contentDescription="@string/password"
            android:layout_marginRight="12dp" />

        <TextView
            android:id="@+id/tv_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="2dp"
            android:text="@string/terms"
            android:textAlignment="center"
            android:fontFamily="@font/regular"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_primary"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/loggedIn"
            android:textAlignment="center"
            android:fontFamily="@font/regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>