<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:context=".LoginActivity"
        android:fillViewport="true">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toTopOf="@+id/tv_login1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_login1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="2dp"
            android:fontFamily="@font/bold"
            android:text="@string/login1"
            style="@style/TextView"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/tv_login2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_login2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/regular"
            android:text="@string/login2"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/regular"
            android:paddingStart="25dp"
            android:paddingEnd="20dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/email"
            android:paddingRight="20dp"
            android:paddingLeft="25dp" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/password"
            android:fontFamily="@font/regular"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingEnd="45dp"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_forgot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.196"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/password"
            android:paddingLeft="25dp"
            android:paddingRight="45dp" />

        <ImageView
            android:id="@+id/btn_show_pass"
            style="@style/ImageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="12dp"
            android:scaleX= "0.7"
            android:scaleY= "0.7"
            app:layout_constraintBottom_toBottomOf="@+id/et_password"
            app:layout_constraintEnd_toEndOf="@id/et_password"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/et_password"
            app:layout_constraintTop_toTopOf="@+id/et_password"
            android:contentDescription="@string/password"
            android:layout_marginRight="12dp"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/regular"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/forgot"
            app:layout_constraintBottom_toTopOf="@+id/tv_or_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_or_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/regular"
            android:text="@string/or_sign_up"
            app:layout_constraintBottom_toTopOf="@id/ib_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/ib_google"
            style="@style/ImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/login"
            android:padding="17dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/btn_login"
            app:layout_constraintEnd_toStartOf="@+id/ib_facebook"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/google" />

        <ImageButton
            android:id="@+id/ib_facebook"
            style="@style/ImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:adjustViewBounds="true"
            android:padding="15dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/ib_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/ib_google"
            app:layout_constraintTop_toTopOf="@+id/ib_google"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/facebook"
            android:layout_marginRight="40dp"
            android:contentDescription="@string/login"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/lb_facebook"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="@+id/ib_facebook"
            app:layout_constraintEnd_toEndOf="@+id/ib_facebook"
            app:layout_constraintStart_toStartOf="@+id/ib_facebook"
            app:layout_constraintTop_toTopOf="@+id/ib_facebook" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_primary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/bold"
            app:layout_constraintBottom_toTopOf="@+id/tv_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:text="@string/notLoggedIn"
            android:textAlignment="center"
            android:fontFamily="@font/regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="lollipop" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>